--- a/less/footer.less
+++ b/less/footer.less
@@ -5,7 +5,7 @@
 	h3 { 
 		color: white;
 		font-size: 24px;
-		.lato-normal();
+		.font-normal();
 		margin-top: 26px;
 	}
 	.span5 {
@@ -42,7 +42,7 @@
 				line-height: 27px;
 				height: 168px;
 				overflow: hidden;
-				.lato-normal();
+				.font-normal();
 			}
 		}
 
