--- a/less/guide.less
+++ b/less/guide.less
@@ -52,12 +52,12 @@
 	 
 	}
 	h1 {
-		.lato-semibold();
-		color: @dark-brown;
+		.font-semibold();
+		color: @charcoal;
 	}
 	h2 {
-		.lato-semibold();
-		color: @dark-brown;
+		.font-semibold();
+		color: @charcoal;
 	}
 	h3 {
 	  
@@ -114,7 +114,7 @@
 form {
 	label {
 		font-size: 12px;
-		.lato-normal();
+		.font-normal();
 	}	
 	input {
 		.border-radius(0);
