--- a/less/home.less
+++ b/less/home.less
@@ -44,15 +44,15 @@
 					background: white;
 					margin: 0;
 					margin-top: 20px;
-					height: 150px;					
+					height: 100px;					
 					width: 100%;
 					text-align: center;
 					img { margin-top: 30px;}
 				}
 				.wrapper { 
-					background: #f7f7f7;
+					background: rgba(255, 255, 255, 0.51);
 					padding: 10px 20px; 
-					height: 190px;
+					height: 240px;
 				}
 				
 				p { 
@@ -70,8 +70,8 @@
 					margin-right: 30px;
 					margin-bottom: 6px;
 					.icon-calendar-empty, .icon-time { 
-						color: #e74c3c;
-						font-size: 20px;
+						color: @blue;
+						font-size: 23px;
 						margin-right: 10px;
 						line-height: 10px;
 					}
