--- a/less/mixins/font.less
+++ b/less/mixins/font.less
@@ -8,22 +8,7 @@
 	font-weight: 400;
 }
 
-.font-semi-bol() {
+.font-semibold() {
 	font-family: 'Helvetica', sans-serif;
 	font-weight: 600;
-}
-
-.lato-light() {
-	font-family: 'Lato', sans-serif;
-	font-weight: 300;
-}
-
-.lato-semibold() {
-	font-family: 'Lato', sans-serif;
-	font-weight:600;
-}
-
-.lato-normal() {
-	font-family: 'Lato', sans-serif;
-	font-weight: 400;
 }
