--- a/less/search.less
+++ b/less/search.less
@@ -33,14 +33,18 @@
 		float: right;
 		margin-right: 8px;
 	}
-	h2 { color: white; .lato-light(); }
+	h2 { color: white; .font-light(); }
 	
 	.controls {
 		margin-left: 140px;
 	}
 	#work-type { height: 116px; }
 }
+#sort-toolbar {
+	select, label { font-size: 14px; }
+	label { line-height: 30px; margin: 0;}
 
+}
 @media (min-width: 1200px) {
 
 	#job-search {
