--- a/less/adcontainer.less
+++ b/less/adcontainer.less
@@ -13,7 +13,7 @@
 }
 
 #content .notice-container > header > h1 {
-	.lato-semibold();
+	.font-semibold();
 	display: inline;
 	position: relative;
 	line-height: 21px;
@@ -48,7 +48,7 @@
 		height: 120px;
 		h1 { 
 			color: #333;
-			.lato-semibold();
+			.font-semibold();
 			font-size: 24px;
 			margin: 0; 
 			margin: 0 20px 0 20px;
