--- a/less/base.less
+++ b/less/base.less
@@ -8,7 +8,7 @@
 	...................................................................... */
 
 body {
-	background:#fff;
+	background:#f1f1f1;
 }
 
 a {
@@ -52,7 +52,7 @@ a {
 
 		p { 
 			
-			.lato-normal();
+			.font-normal();
 			margin: 0;	
 			//margin-bottom:6px;
 		}
@@ -60,7 +60,7 @@ a {
 			margin-left:20px;
 			li{
 				background: none;
-				.lato-normal();
+				.font-normal();
 				font-size:12px;
 				list-style: disc;
 				padding: 0px;
@@ -82,7 +82,7 @@ a {
 
 
 	#btn-apply {
-		//.lato-light();
+		//.font-light();
 		width: 86%;
 		display: block;
 		margin: 0 auto;
@@ -106,7 +106,7 @@ a {
 	}
 
 	.alert-info {
-		.lato-normal();
+		.font-normal();
 	}
 
 } 
@@ -130,7 +130,7 @@ a {
 		text-align:center;
 		h3 { 
 			color: white; 
-			.lato-light;
+			.font-light;
 		}
 		strong { color: @brown;}
 		p { font-size: 14px; color: white; }
@@ -143,7 +143,7 @@ a {
 		text-align:center;
 		h3 { 
 			color: white; 
-			.lato-light;
+			.font-light;
 		}
 		.reset-pwd { 
 			margin-top: 22px;
