--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -224,7 +224,7 @@ textarea {
 
 body {
 	margin: 0;
-	.lato-normal();
+	.font-normal();
 	font-size: 12px;
 	line-height: 20px;
 	color: #333333;
@@ -1061,7 +1061,7 @@ input,
 button,
 select,
 textarea {
-	.lato-normal();
+	.font-normal();
 }
 
 label {
@@ -1126,7 +1126,7 @@ select,
 	outline: 0;
 	background-color: #ffffff;
 	border: 1px solid #cccccc;
-	.border-radius(5px);
+	.border-radius(6px);
 	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -1735,7 +1735,7 @@ select:focus:invalid:focus {
 .input-prepend .add-on,
 .input-prepend .btn {
 	margin-right: -1px;
-	.border-radius(5px 0px 0px 5px);
+	.border-radius(6px 0px 0px 6px);
 }
 
 .input-prepend .add-on:first-child,
@@ -1751,7 +1751,7 @@ select:focus:invalid:focus {
 
 .input-prepend {
 	input, select, .uneditable-input {
-	.border-radius(0px 5px 5px 0px);
+	.border-radius(0px 6px 6px 0px);
 }
 }
 
@@ -2867,10 +2867,7 @@ table th[class*="span"],
 	border: 1px solid rgba(0, 0, 0, 0.2);
 	*border-right-width: 2px;
 	*border-bottom-width: 2px;
-
-	-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-	-moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+	.border-radius(6px);
 	-webkit-background-clip: padding-box;
 	-moz-background-clip: padding;
 	background-clip: padding-box;
@@ -3118,15 +3115,15 @@ button.close {
 	margin-bottom: 0;
 	*margin-left: .3em;
 	font-size: 16px;
-	.lato-normal() !important;
+	.font-normal() !important;
 	line-height: 20px;
 	color: #fff;
 	text-align: center;
 	vertical-align: middle;
 	cursor: pointer;
-	background-color: @orange;
+	background-color: @charcoal;
 	border:0;
-	.border-radius(5px);
+	.border-radius(6px);
 }
 
 .btn:hover,
@@ -3136,7 +3133,7 @@ button.close {
 .btn.disabled,
 .btn[disabled] {
 	color: #fff;
-	background-color: @orange-dark;
+	background-color: @orange-light;
 }
 
 .btn:active,
@@ -4270,7 +4267,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-search .search-query {
 	padding: 4px 14px;
 	margin-bottom: 0;
-	.lato-normal();
+	.font-normal();
 	font-size: 13px;
 	font-weight: normal;
 	line-height: 1;
@@ -4347,7 +4344,7 @@ input[type="submit"].btn.btn-mini {
 	float: none;
 	padding: 20px 27px 20px;
 	color: white;
-	.lato-normal();
+	.font-normal();
 	font-size: 16px;
 	text-transform: uppercase;
 	text-decoration: none;
