--- a/less/employer.less
+++ b/less/employer.less
@@ -1,7 +1,7 @@
 .employer {
 	
 	h3 {
-		.lato-semibold();
+		.font-semibold();
 	}
 	
 	.wrapper {
@@ -33,7 +33,7 @@
 			width: 100%;
 			h2 {
 				color: white;
-				.lato-light();
+				.font-light();
 				font-size: 19px;
 				line-height: 34px;
 				float: left;
@@ -64,7 +64,7 @@
 			.table-header-row {
 				color: #fff;
 				th {
-					.lato-light();
+					.font-light();
 					background: @pastel-brown;
 					padding: 4px;
 					font-size: 14px;
@@ -96,7 +96,7 @@
 				
 				td {
 					font-size: 12px;
-					.lato-normal();
+					.font-normal();
 					padding: 6px 10px;
 					border: 1px solid #ddd;
 					
@@ -342,7 +342,7 @@
 	}
 	#credit-card {
 		h3 { 
-			.lato-light();
+			.font-light();
 		}
 		p { margin-bottom:21px;}
 		ul {
