--- a/less/form.less
+++ b/less/form.less
@@ -1,118 +1,65 @@
 /* =FORMS STYLES 
 =================================================================== */
-.modal { padding : 0 !important;}
-.validate-form , .form {
-	h4 {
-		.lato-normal();
-		font-size: 12px;
-		line-height: 20px;
-		padding: 6px 10px;
-		color: white;
-		display: block;
-		border-bottom: 0 none;
-		background: @dark-brown;
-		//#gradient .vertical( @light-orange, @dark-orange);
-		
-		margin: 0;
-		
-		
-	}
 
-	.pad {
-		.box-sizing(border-box);
-		border: 1px solid #ccc;
-		padding: 10px 20px;
-		
-	}
-	> div {
+.register-form {
+	h1 { 
+		text-align: center;
+		font-size: 24px;
 		margin-bottom: 21px;
 	}
-
-	.alert {
-		border: 1px solid #fbeed5 !important;
-	}
-	
-	// .btn-warning {
-	// 	margin-left: 5px;
-	// }
-
-	ol, ul {
-		margin: 0;
-		//padding: 0 0 20px 20px;
-		//float: left;
-		//margin-right: 34px;
-
-		li {
-			list-style: none;
-			
-			label { 
-				
-				float: left; 
-				line-height: 30px;
-				width: 215px;
-
-				&.checkbox { 
-					line-height: inherit;
-					margin-top: 5px;
-					margin-left: 10px;
-				}
-
-			}
-
-			input[type="submit"], input[type="button"] {
-				margin-top: 10px;
-				
-			}
-
-		}
-	}
-
-	&#applicant-privacy-settings, &#job-apply{
-		margin-bottom: 0;
-		div {  margin-bottom: 0;}
-	}
-	
-	&.applicant-register-form, &.employer-register-form  {
-		#recaptcha_area {
-			margin: 0 auto;
-		}
-	}
-}
-
-
-
-	
-.form-signin {
-	
-	max-width: 424px;
-	margin: 0 auto;
-	border: 1px solid #dadada;
-	form { 
-		padding: 20px; 
-		overflow: hidden; 
-
-		ol li label { width: 130px;}
-	}
-}
-
-#form-login {
-	a {
+	h4 { 
+		clear: both;
+		color: @charcoal;
 		display: block;
-		font-size: 12px;
-		margin-top: 12px;
-		text-align: center;
+		font-size: 18px;
+		font-style: italic;
+		position: relative;
+		margin: 20px auto;
+		text-align: center; 
+		width: 600px;
+
+
+		&:before, &:after {
+			content: "";
+			display: block;
+			position: absolute;
+			height: 1px;
+			width: 30%;
+			background: #d8d8d8;
+			top: 10px;
+		}
+		&:after { right: 0;}
 	}
-	input[type="submit"], input[type="button"] {
-		margin-top: 10px;
-		margin-right: 34px;
+
+
+
+	.span6 { 
+		.border-radius(6px);
+		background: #fbfbfb;
+		background: -moz-linear-gradient(top, #fbfbfb 92%, #efefef 100%);
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(92%, #fbfbfb), color-stop(100%, #efefef));
+		background: linear-gradient(top, #fbfbfb 92%, #efefef 100%);
+		margin: 0 auto; 
+		float: none;
+		box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+		padding: 40px 45px;
+
+
+		label, input {
+			font-size: 14px;
+			line-height: 30px;
+		}
+		input { height: 30px;}
+		select { height: 40px;}
 	}
-	li { overflow: hidden; }
 }
+
+
 
 #form-reset {
 	label { display: block; }
 }
-
+.modal { padding : 0 !important;}
 /* =APPLY JOB
 =================================================================== */
 #job-apply {
