--- a/less/listing.less
+++ b/less/listing.less
@@ -1,12 +1,8 @@
 #content {
 
-	#sort-toolbar {
-		margin-bottom: 12px;
-	}
 	.listings {
 		margin-left: 0;
 		> li {
-			background: #f8f8f8;
 			border: solid 1px #dedede;
 			box-shadow: inset 0 0 10px #ddd;
 			clear: both;
@@ -15,33 +11,28 @@
 			margin-bottom: 21px;
 			position: relative;
 			
-			//min-height: 202px;
-
 			h2 {
-				color: @orange;
-				.lato-semibold();
-				font-size: 18px;
-				line-height: 24px;
-				
+			
+				font-size: 21px;
+				line-height: 30px;
 				margin: 0 ;
+				margin-bottom: 12px;
+			
 				a {
-					color:  @dark-brown;
+					.font-normal();
+					color: @charcoal;
+					display: block;
+					
+					
 					&:hover {color: @light-orange;}
 				}
 			}
-
-
-			
 			
 			li {
 				list-style: disc;
 			}		
 		}
-		.figure {
-			margin: 0;
-			float: left;
-			margin-right: 20px;
-		}
+		
 					
 	}
 
@@ -56,50 +47,65 @@
 	}
 
 	#job-listing {
-		img { height: 40px;}
+		
+		margin-top: 50px;
+		li { 
+			border-bottom: 1px solid #ccc; 
+			min-height: 200px;
+			
+		}
 		.shortlist-tag {
 			display: none;
 			background: url(/img/icons/bookmark.png);
-			height: 51px;
-			width: 48px;
+			height: 82px;
+			width: 82px;
 			position: absolute;
-			top: -10px;
-			right: 5px;
-			.icon-star {
-				font-size: 25px;
-				color: yellow;
-				position: absolute;
-				top: 7px;
-				left: 6px;
-			}
+			top: -5px;
+			right: -5px;
 			
-			//transition
-			-webkit-transition: display ease-in 0.1s;
-			-moz-transition: display ease-in 0.1s;
-			transition: display ease-in 0.1s;
-
+			
 			&.active {
 				display: block;
 			}
 		}
 
-		.job-wrapper {
-
-			overflow: hidden;
-
-		}
+		
 		.main-info {
 			.box-sizing(border-box);
-
 			float: left;
 			width: 70%;
 			padding-right: 15px;
-			
-			p > a {
+			span { 
+				.font-normal();
+				display: block; 
+				height: 24px;
+				line-height: 24px;
+				float: left; 
+				font-size: 14px;
+				margin-right: 30px;
+				margin-bottom: 12px;
+				.icon-calendar-empty, .icon-time { 
+					color: @orange;
+					font-size: 23px;
+					margin-right: 10px;
+					line-height: 10px;
+				}
+			}
+			.category {
 				
+				display: block;
+				clear: both;
+				font-size: 14px;
+				.font-normal();
+				margin-bottom: 12px;
 				&:hover { 
 					color: @light-orange;
 				}
+			}
+			
+			p { 
+				font-size: 14px;
+				.font-normal();
 			}
 		}
 
@@ -107,18 +113,31 @@
 			width: 30%;
 			float: right;
 			h4 {
-				color: @dark-brown;
-				.lato-normal();
+				color: @orange;
+				.font-normal();
 				margin-top: 0;
 			}
 			> span { 
-				font-size: 12px;
+				font-size: 14px;
 				display: block;
 				margin-bottom: 10px;
+				line-height: 24px;
+				i { 
+					font-size: 23px;
+					display: block;
+					float: left;
+					width: 28px;
+					margin-right: 10px;
+					text-align: center;
+					color: @orange;
+				}
+				
 			}
+			
 			img {
-				height: 50px;
+				max-height: 40px; max-width:200px;
 				clear: both;
+				margin-bottom: 18px;
 			}
 
 			.salary,  {
@@ -130,10 +149,7 @@
 				text-transform: uppercase;
 			}
 
-			.btn-group, a {
-				margin-top: 10px;
-
-			}
+			.btn-group, a { margin-top: 10px; }
 
 		}
 
@@ -144,24 +160,25 @@
 		}
 		#job-controls {
 			width: 30%;
-			a.btn {
-				width: 65px;
+			position: absolute;
+			bottom: 20px;
+			right: 0;
+			a {
+				font-size: 16px;
+				cursor: pointer;
+				margin-right: 10px;
+				line-height: 24px;
 				i { 
-					font-size: 16px;
-					margin-left: 6px;
-					position:relative;
-					top: 1px;
+					color: @orange;
+					font-size: 23px;
+					margin-left: 10px;
+					position: relative;
+					top: 3px;
+					
 				}
 			}
-			.shortlist-btn {
-				width: 100px;
-				i { 
-					font-size: 16px;
-					margin-left: 6px;
-					position:relative;
-					top: 1px;
-				}
-			}
+			
+		
 		}
 	}
 
