--- a/less/footer.less
+++ b/less/footer.less
@@ -9,7 +9,7 @@
 		margin-top: 26px;
 	}
 	.span5 {
-		background: @orange;
+		background: @green;
 		height: 350px;
 		text-align: center;
 		ul {
@@ -76,14 +76,14 @@
 			font-size: 14px;
 			list-style: none;
 			a { 
-				color: @orange;
+				color: @green;
 				display: block;
 				padding: 15px 0px;
 				&:hover { color: white;}
-				&:active { color: @orange-dark;}
+				&:active { color: @green-dark;}
 
 			}
-			+ li { border-top: 1px solid @orange;}
+			+ li { border-top: 1px solid @green;}
 		}
 	}
 }
@@ -92,7 +92,7 @@
 	background: @darker-charcoal;
 	height: 50px;
 	.span5 {
-		background: @orange-dark;
+		background: @green-dark;
 		height: 50px;
 		a { 
 			line-height: 50px;
@@ -111,8 +111,8 @@
 			list-style: none;
 			a { 
 				color: white; 
-				&:hover { color: @orange-light;}
-				&:active { color: @orange-dark;}
+				&:hover { color: @green-light;}
+				&:active { color: @green-dark;}
 				font-size: 14px;
 			}
 			+ li { margin-left: 52px;}
