--- a/less/header.less
+++ b/less/header.less
@@ -1,11 +1,9 @@
 .header{
 	height: 180px;
 	h1 {
-		margin-top: 33px;
+		margin-top: 53px;
 	}
-	.brand img {
-		height: 100px;
-	}
+	
 
 	.reg-toolbar {
 		margin-top: 30px;
@@ -23,10 +21,10 @@
 				color: @charcoal; 
 				text-transform: uppercase;
 				&:hover {
-					color: @orange;
+					color: @green;
 				}
 				&:active {
-					color: @orange-light;
+					color: @green-light;
 				}
 
 				.caret {
