--- a/less/mixins/font.less
+++ b/less/mixins/font.less
@@ -1,14 +1,18 @@
 .font-light() {
-	font-family: 'Helvetica', sans-serif;
+	font-family: 'Segoe UI', Helvetica, Arial, Helvetica, sans-serif;
 	font-weight: 300;
 }
 
 .font-normal() {
-	font-family: 'Helvetica', sans-serif;
+	font-family: 'Segoe UI', Helvetica, Arial, Helvetica, sans-serif;
 	font-weight: 400;
 }
 
 .font-semibold() {
-	font-family: 'Helvetica', sans-serif;
+	font-family: 'Segoe UI', Helvetica, Arial, Helvetica, sans-serif;
 	font-weight: 600;
+}
+
+.font-serif() {
+	font-family: 'Lora', serif;
 }
