--- a/less/mixins/helpers.less
+++ b/less/mixins/helpers.less
@@ -237,3 +237,13 @@
 	background: -o-linear-gradient(bottom,#0079c1 0,#0079c1 20%,#00a1ff 100%);
 	background: linear-gradient(bottom,#0079c1 0,#0079c1 20%,#00a1ff 100%);
 }
+
+.tile {
+	.border-radius(6px);
+	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+	
+	background: #fbfbfb;
+	background: -moz-linear-gradient(top, #fbfbfb 92%, #efefef 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(92%, #fbfbfb), color-stop(100%, #efefef));
+	background: linear-gradient(top, #fbfbfb 92%, #efefef 100%);
+}
