--- a/less/mixins/settings.less
+++ b/less/mixins/settings.less
@@ -32,16 +32,18 @@
 
 // Colour Palettes --------------------------------
 
-@charcoal: #333333;
+@charcoal: #191816;
 @darker-charcoal: #222222;
 @lighter-charcoal: #414040;
-@orange: #f39c12;
-@orange-light: #ffa312;
-@orange-dark: #d1850d;
+@green: #3FAEA5;
+@green-light: #58CAC1;
+@green-dark: #1F7972;
 
 @blue: #2581bc;
 @light-blue: #2a8fd0;
 @dark-blue: #1e699a;
+
+
 
 
 @dark-brown: #177DB2; //menu blue
@@ -63,5 +65,5 @@
 @pastel-brown: #6D6B99;
 
 
-@green: #99cc33;
+
 @dark-green: rgb(116, 126, 87);
