--- a/less/search.less
+++ b/less/search.less
@@ -1,37 +1,38 @@
 #job-search {
-	padding-bottom: 10px;
+	padding-bottom: 20px;
+	padding-top: 45px;
 	label { 
 		font-size: 14px;
 		line-height: 38px;
 		width: 120px;
 	}
 	input.input-xlarge { 
-		height: 38px;
+		height: 28px;
 		font-size: 14px;
-		width: 295px;
+		width: 281px;
 	}
 	select.input-xlarge {
 		font-size: 14px;
-		height: 48px;
-		width: 309px;
-		padding-top: 13px;
-		padding-bottom: 13px;
+		height: 38px;
+		width: 295px;
+		padding-top: 8px;
+		padding-bottom: 8px;
 	}
 	.span1 { 
 		font-size: 14px;
-		width: 84px;
-		height: 48px;
-		padding-top: 13px;
-		padding-bottom: 13px;
+		width: 78px;
+		height: 38px;
+		padding-top: 8px;
+		padding-bottom: 8px;
 	}
 	.add-on {
-		height: 38px;
-		line-height: 38px;
+		height: 28px;
+		line-height: 28px;
 		font-size: 16px;
 	}
 	#search {
 		float: right;
-		margin-right: 8px;
+		margin-right: 24px;
 	}
 	h2 { color: white; .font-light(); }
 	
@@ -49,12 +50,15 @@
 
 	#job-search {
 		label { width: 120px; }
-		input.input-xlarge { width: 404px; }
-		select.input-xlarge { width: 420px; }
+		input.input-xlarge { width: 384px; }
+		select.input-xlarge { width: 400px; }
 		.span1 { width: 92px;}
 		.controls {	margin-left: 140px;	}
 		.span1 {
-			width: 121px;
+			width: 114px;
+		}
+		#search {
+			margin-right: 28px;
 		}
 	}
 	
