--- a/less/employer.less
+++ b/less/employer.less
@@ -26,35 +26,22 @@
 	.table-container {
 		margin-bottom: 21px;
 		
-		.table-header-wrapper {
-			background: @dark-brown;
-			height: 34px;
-			position: relative;
-			width: 100%;
-			h2 {
-				color: white;
-				.font-light();
-				font-size: 19px;
-				line-height: 34px;
-				float: left;
-				margin: 0 0 0 4px;
-			}
-			.table-toolbar {
-				background: @pastel-brown;
-				border: 0;
-				float: right;
-				
-				a {
-					display: block;
-					color: #fff;
-					padding: 3px 5px 3px 5px;
-
-					&:hover { color: @light-orange;}
-					i {
-						font-size: 14px;
-						margin-right: 5px;
-					}
-				}
+		.dataTables_filter {
+			float: right;
+		}
+		.dataTables_length {
+			float: left;
+		}
+		.dataTables_info {
+			margin-top: 21px;
+			float: left;
+		}
+		.dataTables_paginate {
+			float: right;
+			margin-top: 21px;
+			a {
+				margin-left: 10px;
+				cursor: pointer;
 			}
 		}
 		table {
@@ -65,7 +52,7 @@
 				color: #fff;
 				th {
 					.font-light();
-					background: @pastel-brown;
+					background: @green-dark;
 					padding: 4px;
 					font-size: 14px;
 					text-align: left;
@@ -83,13 +70,13 @@
 				a { 
 					&:hover { 
 						text-decoration: underline;
-						color: #fff;
+						
 					}
 				}
 				&:hover { 
-					background: @green; 
+					background: #f1f1f1; 
 					a { 
-						color: #fff;
+						
 						text-decoration: none;
 					}
 				}
