--- a/less/form.less
+++ b/less/form.less
@@ -1,6 +1,10 @@
 /* =FORMS STYLES 
 =================================================================== */
-
+.form {
+	li {
+		list-style: none;
+	}
+}
 .register-form {
 	h1 { 
 		text-align: center;
@@ -34,18 +38,13 @@
 
 
 	.span6 { 
-		.border-radius(6px);
-		background: #fbfbfb;
-		background: -moz-linear-gradient(top, #fbfbfb 92%, #efefef 100%);
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(92%, #fbfbfb), color-stop(100%, #efefef));
-		background: linear-gradient(top, #fbfbfb 92%, #efefef 100%);
+		padding: 40px 45px;
+		.tile;
 		margin: 0 auto; 
 		float: none;
-		box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-		padding: 40px 45px;
+		
 
-
-		label, input {
+		label, input[type=text], input[type=password] {
 			font-size: 14px;
 			line-height: 30px;
 		}
@@ -54,6 +53,53 @@
 	}
 }
 
+.login-form {
+	margin-bottom: 42px;
+	.span6 {
+		padding: 40px 45px;
+		.tile;
+		margin: 0 auto; 
+		float: none;
+
+
+		label, input[type=text], input[type=password] {
+			font-size: 14px;
+			line-height: 30px;
+		}
+		input { height: 30px;}
+		select { height: 40px;}
+	}
+	h4 { 
+		clear: both;
+		color: @charcoal;
+		display: block;
+		font-size: 18px;
+		font-style: italic;
+		position: relative;
+		margin: 20px auto;
+		text-align: center; 
+		width: 600px;
+
+
+		&:before, &:after {
+			content: "";
+			display: block;
+			position: absolute;
+			height: 1px;
+			width: 30%;
+			background: #d8d8d8;
+			top: 10px;
+		}
+		&:after { right: 0;}
+	}
+	
+	a {
+		display: block; 
+		text-align: center;
+		text-decoration: underline;
+	}
+
+}
 
 
 #form-reset {
