--- a/less/listing.less
+++ b/less/listing.less
@@ -3,8 +3,8 @@
 	.listings {
 		margin-left: 0;
 		> li {
-			border: solid 1px #dedede;
-			box-shadow: inset 0 0 10px #ddd;
+			//border: solid 1px #dedede;
+			//box-shadow: inset 0 0 10px #ddd;
 			clear: both;
 			list-style: none;
 			padding: 20px;
@@ -49,7 +49,7 @@
 	#job-listing {
 		
 		margin-top: 50px;
-		li { 
+		> li { 
 			border-bottom: 1px solid #ccc; 
 			min-height: 200px;
 			
@@ -62,8 +62,6 @@
 			position: absolute;
 			top: -5px;
 			right: -5px;
-			
-			
 			&.active {
 				display: block;
 			}
@@ -75,6 +73,10 @@
 			float: left;
 			width: 70%;
 			padding-right: 15px;
+			h2 a { 
+				color: #000; 
+				&:hover { color: @green;}
+			}
 			span { 
 				.font-normal();
 				display: block; 
@@ -85,7 +87,7 @@
 				margin-right: 30px;
 				margin-bottom: 12px;
 				.icon-calendar-empty, .icon-time { 
-					color: @orange;
+					color: @blue;
 					font-size: 23px;
 					margin-right: 10px;
 					line-height: 10px;
@@ -96,29 +98,32 @@
 				display: block;
 				clear: both;
 				font-size: 14px;
-				.font-normal();
+				.font-semibold();
+				color: @green;
 				margin-bottom: 12px;
 				&:hover { 
-					color: @light-orange;
+					color: @green-light;
 				}
 			}
 			
 			p { 
-				font-size: 14px;
-				.font-normal();
+				font-size: 13px;
+				.font-serif();
+				line-height: 27px;
 			}
 		}
 
 		.additional-info {
 			width: 30%;
 			float: right;
+			margin-bottom: 36px;
 			h4 {
-				color: @orange;
+				color: @green;
 				.font-normal();
 				margin-top: 0;
 			}
 			> span { 
-				font-size: 14px;
+				font-size: 12px;
 				display: block;
 				margin-bottom: 10px;
 				line-height: 24px;
@@ -129,7 +134,7 @@
 					width: 28px;
 					margin-right: 10px;
 					text-align: center;
-					color: @orange;
+					color: @blue;
 				}
 				
 			}
@@ -164,12 +169,14 @@
 			bottom: 20px;
 			right: 0;
 			a {
-				font-size: 16px;
+				font-size: 14px;
 				cursor: pointer;
 				margin-right: 10px;
 				line-height: 24px;
+				text-transform: uppercase;
+				font-weight: bold;
 				i { 
-					color: @orange;
+					color: @blue;
 					font-size: 23px;
 					margin-left: 10px;
 					position: relative;
